@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Assign and view session galleries
skinparam class {
 BorderColor #344054
 FontColor #101828
 BackgroundColor #F9FAFB
}
class GalleryAssignment {
 +Guid SessionId
 +Guid ClientId
 +long Version
 +Allows(accountId: Guid, expired: bool): bool
}
interface IStudioStore {
 +Run<T>(lockKey, action): Task<T>
}
interface IStudioTransaction {
 +Get<T>(id): Task<T?>
 +List<T>(): Task<T[]>
 +Save<T>(value, expectedVersion): Task
}
IStudioStore ..> IStudioTransaction : scopes one committed unit of work
IStudioStore o-- GalleryAssignment : persists or supplies inputs
interface IPhotoStorage
class GetClientPhotoHandler
GetClientPhotoHandler ..> IPhotoStorage : uses
GetClientPhotoHandler ..> GalleryAssignment : orchestrates
@enduml
